# Pro-grid

./: .env.example  .gitignore  LICENSE  README.md
apps/api/: arena.db  pyproject.toml  requirements.txt
apps/api/arena/: __init__.py  config.py  deps.py  main.py  models.py  seed.py
apps/api/arena/core/: db.py  logging.py  redis.py
apps/api/arena/repositories/: blocks.py  energy.py  nodes.py  regions.py  workloads.py
apps/api/arena/routes/: ai.py  analytics.py  blockchain.py  compute.py  energy.py  health.py  nodes.py
apps/api/arena/schemas/: analytics.py  compute.py  energy.py
apps/api/arena/services/: allocator.py  energy_sim.py  engine.py  forecaster.py  mining_sim.py  recommender.py  state.py
apps/api/arena/ws/: hub.py  routes.py
apps/api/prisma/: schema.prisma
apps/api/tests/: test_allocator.py  test_energy_sim.py
apps/web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/ai/: page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/blockchain/: page.tsx
apps/web/app/compute/: page.tsx
apps/web/app/nodes/: page.tsx
apps/web/components/charts/: EnergyAreaChart.tsx  RegionBarChart.tsx
apps/web/components/dashboard/: KpiCard.tsx  RegionMap.tsx
apps/web/components/shell/: Sidebar.tsx  Topbar.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  scroll-area.tsx  skeleton.tsx  tabs.tsx
apps/web/hooks/: useTick.ts
apps/web/lib/: api.ts  env.ts  utils.ts
apps/web/types/: api.ts
docs/: API.md  ARCHITECTURE.md  SYSTEM_DESIGN.md
